--- a/Assets/scss/Utillity/_buttons.scss
+++ b/Assets/scss/Utillity/_buttons.scss
@@ -7,4 +7,9 @@
     font-size: 20px;
     font-weight: 600;
     width: 100%;
+
+    &.btn-back{
+        background: white;
+        color: $incideblue;
+    }
 }
